--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,8 @@ input {
     font-size: 16px;
 }
 
-.nva_bar,
+
+/* .nva_bar,
 .nva_bar header,
 .nva_bar .menu {
     display: flex;
@@ -143,11 +144,11 @@ input {
 }
 
 .menu a {
-    /* height: 30px; */
+    height: 30px;
     font-size: 1.25rem;
     padding: .4rem;
     display: flex;
-    /* background: #d800ff; */
+    background: #d800ff;
     color: #fff;
     border-radius: 5rem;
 }
@@ -160,7 +161,7 @@ input {
 .empty {
     height: 102px;
     width: 0;
-}
+} */
 
 
 /* section-1 */
