--- a/users/profile.css
+++ b/users/profile.css
@@ -48,6 +48,7 @@ p {
     object-fit: contain;
     object-position: center;
     height: 100%;
+    width: 150px;
     border-radius: 50%;
 }
 
@@ -134,6 +135,11 @@ p {
 h3 {
     font-family: 'Syne Mono', monospace;
     font-weight: 500;
+    min-width: 250px;
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .profile .postIcon {
