--- a/users/edit.css
+++ b/users/edit.css
@@ -110,7 +110,8 @@
     position: relative;
 }
 
-.userProfileImg .change input[type="text"] {
+.userProfileImg .change input[type="text"],
+.userProfileImg .change input[type="password"] {
     width: 60%;
     height: 35px;
     border-radius: 10px;
