--- a/users/fullPost.css
+++ b/users/fullPost.css
@@ -4,5 +4,76 @@
     justify-content: center;
     align-content: center;
     flex-direction: column;
-    margin-top: 45px;
+    margin: 45px 0;
+}
+
+.likeComments {
+    width: 100%;
+    padding: 3px 10px;
+}
+
+.cUser {
+    display: flex;
+    margin: 5px 0;
+}
+
+.cUser div {
+    margin: auto 5px;
+}
+
+.cUser .cImg {
+    width: 32px;
+    height: 32px;
+    /* display: block; */
+}
+
+.cUser .cImg img {
+    display: block;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 1px solid;
+    background-color: #fff;
+}
+
+.cusername {
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.userComments {
+    font-size: 16px;
+    font-weight: 600;
+    color: #2c0000;
+}
+
+.emojionearea.post_com.emojionearea-inline {
+    border: none;
+    height: 100%;
+}
+
+.emojionearea.emojionearea-inline>.emojionearea-editor {
+    color: #3E236D;
+}
+
+.comments {
+    flex-direction: column;
+    max-height: 125px;
+    overflow: auto;
+}
+
+.comments::-webkit-scrollbar {
+    display: none;
+}
+
+
+/* Hide scrollbar for IE, Edge and Firefox */
+
+.comments {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
