--- a/css/main.css
+++ b/css/main.css
@@ -293,6 +293,7 @@ section .scrollBtn .btn-scroll {
     background-repeat: no-repeat;
     background-size: 2900%;
     animation: heart-burst .8s steps(28) 1;
+    filter: drop-shadow(rgb(255, 255, 255) 0px 0px 0.75rem);
 }
 
 @keyframes heart-burst {
@@ -402,6 +403,157 @@ form input {
     padding-left: 10px;
     font-weight: bold;
     font-size: 16px;
+}
+
+.deletePost {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, .30);
+    z-index: 20;
+}
+
+.deletePost .delete_box {
+    margin: 20px auto;
+    /* padding: 20px; */
+    width: 370px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 20px;
+    background: linear-gradient(316deg, hsl(219deg 100% 50%), rgb(223 0 205));
+    box-shadow: 20px 20px 50px rgb(0 0 0 / 50%);
+    backdrop-filter: blur(5px);
+    font-family: 'Padauk', sans-serif;
+    font-weight: 400;
+    color: #fff;
+}
+
+.deletePost .delete_box div {
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    padding: 16px;
+    cursor: pointer;
+}
+
+.deletePost .delete_box .delete {
+    border-bottom: 1px solid #c9c9c9;
+}
+
+.likeComments {
+    width: 100%;
+    padding: 3px 10px;
+}
+
+.emojionearea.post_com.emojionearea-inline {
+    border: none;
+    height: 100%;
+}
+
+.emojionearea.emojionearea-inline>.emojionearea-editor {
+    color: #3E236D;
+}
+
+div#posts {
+    margin-bottom: 50px;
+}
+
+.popPost {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: hsl(0deg 0% 24% / 40%);
+    z-index: 20;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.popPost .posts {
+    margin: 0;
+    backdrop-filter: blur(21px);
+}
+
+.cUser {
+    display: flex;
+    margin: 5px 0;
+}
+
+.cUser .cImg {
+    width: 32px;
+    height: 32px;
+    /* display: block; */
+}
+
+.cUser div {
+    margin: auto 5px;
+}
+
+.cusername {
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.userComments {
+    font-size: 16px;
+    font-weight: 600;
+    color: #2c0000;
+}
+
+.cUser .cImg img {
+    display: block;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 1px solid;
+    background-color: #fff;
+}
+
+.popPost .posts .footer .comments {
+    /* display: flex; */
+    flex-direction: column;
+}
+
+.popPost .header .more a {
+    color: transparent;
+}
+
+.emojionearea.post_com.emojionearea-inline {
+    border: none;
+    height: 100%;
+}
+
+.emojionearea.emojionearea-inline>.emojionearea-editor {
+    color: #3E236D;
+}
+
+.comments::-webkit-scrollbar {
+    display: none;
+}
+
+.comments {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+.comments {
+    flex-direction: column;
+    max-height: 125px;
+    overflow: auto;
 }
 
 
