--- a/css/main.css
+++ b/css/main.css
@@ -223,6 +223,93 @@ section .scrollBtn .btn-scroll {
     color: #fff;
 }
 
+#addStory {
+    position: absolute;
+    bottom: 43px;
+    left: 56px;
+    margin: 0;
+    padding: 0;
+    z-index: 2;
+    background: #fff;
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+}
+
+.storyPop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgb(0, 0, 0);
+    z-index: 20;
+    padding: 13px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.storyPop .preview {
+    width: 425px;
+    height: 97vh;
+    display: flex;
+    border-radius: 20px;
+    background: linear-gradient(316deg, hsl(219deg 100% 50%), rgb(223 0 205));
+    backdrop-filter: blur(5px);
+    font-family: 'Padauk', sans-serif;
+    font-weight: 400;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    position: relative;
+    /* top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
+}
+
+.storyClose {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 16px;
+    cursor: pointer;
+}
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+
+
+/* *::-webkit-scrollbar {
+    display: none;
+}
+* {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+} */
+
+.storyPop .preview img {
+    object-fit: contain;
+    object-position: center;
+    width: 100%;
+    border-radius: 15px;
+}
+
+#uploadStory {
+    border: none;
+    background: #fff;
+    height: 35px;
+    width: 95px;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 10px;
+    cursor: pointer;
+    position: absolute;
+    bottom: 2%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
 
 /* posts */
 
@@ -236,6 +323,7 @@ section .scrollBtn .btn-scroll {
     backdrop-filter: blur(5px);
     margin-bottom: 60px;
     z-index: 1;
+    transition: width 2s;
 }
 
 .posts,
